Power: failing to clear DPMS timeouts should not be fatal

https://bugzilla.gnome.org/show_bug.cgi?id=660859

Signed-off-by: Richard Hughes <richard@hughsie.com>